third-project-start

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         >
       </section>
       <footer class="footer">
-        <p class="footer__copyright">&copy;2022. Yitzchak Morvay</p>
+        <p class="footer__copyright">@2022. Yitzchak Morvay</p>
       </footer>
       <footer class="footer"></footer>
     </div>
