--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-
+<main class="main">
   <body class="page">
     <div class="page__container">
       <header class="header">
@@ -22,16 +22,19 @@
           alt="Practicum Logo"
           class="header__logo"
         />
-        <h1 class="header__title">From Homeland to Homeland</h1>
-        <h3 class="header__subtitle">
+      </header>
+      <section class="lead">
+        <h1 class="lead__title">From Homeland to Homeland</h1>
+        <p class="lead__subtitle">
           An epic journey from Kentucky to Burundi through Wales and Ukraine
-        </h3>
+        </p>
         <img
           src="./images/kalegin-michail-179870-unsplash.jpg"
           alt="header-image"
-          class="header__image"
+          class="lead__image"
         />
-      </header>
+      </section>
+
       <section class="intro">
         <h2 class="intro__title">
           Know the places your online pals come from a little better
@@ -64,7 +67,7 @@
         <img src="./images/__item-7.jpg" alt="photo" class="photo-grid__item" />
       </section>
       <section class="places">
-        <div class="place">
+        <article class="place">
           <h3 class="place__title">Kyiv, Ukraine</h3>
           <div class="place__artist">
             <p class="place__artist-heading">artist</p>
@@ -78,7 +81,7 @@
             alt="picture of Kyiv"
           />
 
-          <a href="#" class="button button place__button"
+          <a href="#" class="button place__button"
             >Buy this artwork as NFT</a
           >
 
@@ -100,9 +103,9 @@
               even by people who live on the far outskirts of the right one.
             </p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h3 class="place__title">Cricieth, Wales</h3>
           <div class="place__artist">
             <p class="place__artist-heading">artist</p>
@@ -135,8 +138,8 @@
               the office of Prime Minister of the UK.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h3 class="place__title">Berea, USA</h3>
           <div class="place__artist">
             <p class="place__artist-heading">artist</p>
@@ -168,8 +171,8 @@
               student receives a full-tuition scholarship.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h3 class="place__title">Muramvya, Burundi</h3>
           <div class="place__artist">
             <p class="place__artist-heading">artist</p>
@@ -208,8 +211,8 @@
               rivers and streams which provide water around the country.
             </p>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <h3 class="place__title">Jerusalem, Israel</h3>
           <div class="place__artist">
             <p class="place__artist-heading">artist</p>
@@ -236,25 +239,23 @@
               Jerusalem is a must place to visit for anyone.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="cover">
         <h2 class="cover__title">Visit us</h2>
 
-        <ul class="cover__subtitle">
-          <li>Year-round</li>
-          <li>Practicum Art Gallery</li>
-          <li>404 Tim Berners-Lee Avenue</li>
-        </ul>
+        <p class="cover__subtitle">Year-round</p>
+        <p class="cover__subtitle">Practicum Art Gallery</p>
+        <p class="cover__subtitle">404 Tim Berners-Lee Avenue </p>
 
         <a href="https://www.recessart.org/" class="button cover__button"
           >Buy tickets</a
         >
       </section>
+      </main>
       <footer class="footer">
         <p class="footer__copyright">@2022. Yitzchak Morvay</p>
       </footer>
-      <footer class="footer"></footer>
     </div>
   </body>
 </html>
