--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
           class="header__logo"
         />
       </header>
-      <section class="lead">
-        <h1 class="lead__title">From Homeland to Homeland</h1>
-        <p class="lead__subtitle">
-          An epic journey from Kentucky to Burundi through Wales and Ukraine
-        </p>
-        <img
-          src="./images/kalegin-michail-179870-unsplash.jpg"
-          alt="header-image"
-          class="lead__image"
-        />
-      </section>
       <main>
+        <section class="lead">
+          <h1 class="lead__title">From Homeland to Homeland</h1>
+          <p class="lead__subtitle">
+            An epic journey from Kentucky to Burundi through Wales and Ukraine
+          </p>
+          <img
+            src="./images/kalegin-michail-179870-unsplash.jpg"
+            alt="header-image"
+            class="lead__image"
+          />
+        </section>
+
         <section class="intro">
           <h2 class="intro__title">
             Know the places your online pals come from a little better
@@ -182,7 +183,7 @@
               alt="picture of Berea"
             />
 
-            <a href="#" class="button place__button">Buy this artwork as NFT</a>
+            <a href="#" class="place__button">Buy this artwork as NFT</a>
 
             <div class="place__description">
               <p class="place__paragraph">
@@ -281,7 +282,7 @@
           <p class="cover__subtitle">Practicum Art Gallery</p>
           <p class="cover__subtitle">404 Tim Berners-Lee Avenue</p>
 
-          <a href="https://www.recessart.org/" class="button cover__button"
+          <a href="https://www.recessart.org/" class="cover__button"
             >Buy tickets</a
           >
         </section>
